fixed hero slider on mobile

--- a/src/pages/home/hero/slider.css
+++ b/src/pages/home/hero/slider.css
@@ -4,5 +4,5 @@
 
 .slider img {
   width: 100%;
-  max-height: 600px;
+  max-height: 650px;
 }
